sonar issues critical&blocker